<resources>
    <string name="app_name">MvpProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="forgotPassword">Забыл пароль</string>
    <string name="registration">Регистрация</string>
    <string name="error">Error</string>
    <string name="success">Success!</string>
    <string name="password_error">неверный пароль</string>
    <string name="login_error">неверный логин</string>
    <string name="name">Введите имя</string>
    <string name="reg">Зарегистрировать</string>
    <string name="login_is_exist">такой логин уже занят</string>
    <string name="create_new_acc">Новый аккаунт зарегестрирован</string>
</resources>